--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-popper": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "reactstrap": "^8.6.0",
     "yup": "^0.29.3"
   },
   "scripts": {
